# resume-builder

./: README.md  pyproject.toml
data/: contacts.json  experience.json  resume.json
src/: build.py  test.py
src/resume_builder/: builder_html.py  builder_md.py  builder_md_pandoc.py  builder_pdf.py  builder_txt.py  resume_builder.py  resume_builder_html.py  resume_builder_md.py  resume_builder_pdf.py  resume_builder_txt.py  resume_builder_utils.py  resume_parser.py  utils_md.py
src/resume_builder/util/: killercup_style.css  r_style.css  resume_print.css  resume_style.css  resume_web.css
static/design/: data-flow.dot  entities.md  flowchart.dot  persistence.md
