[project]
name = "resume_builder"
version = "0.0.5"
authors = [
  { name="R. J. Salvador", email="salvador.workshop@gmail.com" },
]
description = "A more structured approach to handling job search documents"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/rjsalvadorr/resume-builder"
